[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/title_screen.png" type="Texture" id=1]
[ext_resource path="res://UI/theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/button_icon_1.png" type="Texture" id=3]
[ext_resource path="res://UI/button_icon_2.png" type="Texture" id=4]
[ext_resource path="res://UI/Options.gd" type="Script" id=5]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 357.0
size_flags_vertical = 3
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequireOrder" type="CheckButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 824.0
margin_bottom = 39.0
hint_tooltip = "Whether you can spell an animal's name out of of order or not. 
(e.g, ATB vs BAT)"
text = "Require Letters in Order"
align = 1

[node name="ButtonSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 824.0
margin_bottom = 88.0
hint_tooltip = "Which button should control everything in the game."
text = "Left Mouse Button"
icon = ExtResource( 3 )
align = 1
items = [ "Left Mouse Button", ExtResource( 3 ), false, 0, null, "Space", ExtResource( 4 ), false, 1, null ]
selected = 0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 361.0
margin_right = 824.0
margin_bottom = 400.0
size_flags_vertical = 8
text = "Go Back"

[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainer/RequireOrder" to="." method="_on_RequireOrder_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/VBoxContainer/ButtonSelect" to="." method="_on_ButtonSelect_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
